--- a/config/input_generate.yaml
+++ b/config/input_generate.yaml
@@ -1,20 +1,19 @@
-pos_file: "CdSe-pos-1.xyz"
-frc_file: "CdSe-frc-1.xyz"
+pos_file: "mean_md-pos-1.xyz"
+frc_file: "mean_md-frc-1.xyz"
 scaling_factor: 0.4
 scaling_surf: 0.6
 scaling_core: 0.4
 max_random_displacement: 0.15
 surface_atom_types:
-  - "Cd"
-  - "Se"
-  - "Cl"
+  - "Cs"
+  - "Br"
 clustering_method: "KMeans"
 num_clusters: 100
 num_samples_pca: 1200
 num_samples_pca_surface: 600
 num_samples_randomization: 200
 SOAP:
-  species: ["Cd", "Se", "Cl"]
+  species: ["Cs", "Pb", "Br"]
   r_cut: 12.0
   n_max: 7
   l_max: 3
