--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ src/mlff_qd.egg-info/*
 src/mlff_qd/__pycache__/*
 src/mlff_qd/preprocessing/__pycache__/*
 src/mlff_qd/utils/__pycache__/*
+
+*png
+*log
