--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 src/mlff_qd.egg-info/*
 src/mlff_qd/__pycache__/*
 src/mlff_qd/preprocessing/__pycache__/*
+src/mlff_qd/training/__pycache__/*
 src/mlff_qd/utils/__pycache__/*
 
 *png
