--- a/environment.yaml
+++ b/environment.yaml
@@ -1,15 +1,15 @@
-name: D_MLFF_new3
+name: D_MLFF_latest3
 channels:
   - defaults
+  - conda-forge
+  - pytorch
 dependencies:
-  - python=3.10
+  - python=3.12
   - pip
+  - pandas
+  - scikit-learn
+  - wandb
   - pip:
       - schnetpack
-      - pandas
-      - scikit-learn
-      - e3nn
-      - git+https://github.com/mir-group/nequip.git@v0.6.1
-      - wandb
-      - git+https://github.com/mir-group/allegro.git@v0.3.0
-      - mace-torch==0.3.13
+      - nequip==0.10.0
+      - git+https://github.com/mir-group/allegro.git@v0.6.1
