--- a/config_files/input.yaml
+++ b/config_files/input.yaml
@@ -1,3 +1,6 @@
+# Example of an unified file with the common parameters used by all
+# the engines employed by the MLFF_QD platform.
+
 platform: fusion  # (schnet, painn, fusion, nequip, allegro, mace)
 common:
   data:
