Remove enable key

--- a/src/mlff_qd/templates/schnet.yaml
+++ b/src/mlff_qd/templates/schnet.yaml
@@ -52,8 +52,7 @@ training:
       factor: 0.8
       patience: 30
       verbose: true
-    early_stopping:      # add this, default/empty
-      enabled: true
+    early_stopping:      
       monitor: val_loss
       patience: 20
       min_delta: 0.001
