--- a/config_files/schnet.yaml
+++ b/config_files/schnet.yaml
@@ -43,6 +43,7 @@ training:
     max_epochs: 3
     num_workers: 24
     pin_memory: true
+    log_every_n_steps: 1
     optimizer:
       type: 'AdamW'
       lr: 0.0001 #changed 0.0001 to 0.001
@@ -51,6 +52,11 @@ training:
       factor: 0.8
       patience: 30
       verbose: true
+    early_stopping:      
+      monitor: val_loss
+      patience: 20
+      min_delta: 0.001
+      mode: min
 
 # Logging and checkpoint settings
 logging:
