Update .gitignore rule

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ src/mlff_qd/fine_tuning/__pycache__/*
 src/mlff_qd/postprocessing/__pycache__/*
 src/mlff_qd/preprocessing/__pycache__/*
 src/mlff_qd/training/__pycache__/*
+src/mlff_qd/benchmarks/__pycache__/*
 src/mlff_qd/utils/__pycache__/*
 
 *png
