--- a/config_files/painn.yaml
+++ b/config_files/painn.yaml
@@ -39,10 +39,12 @@ training:
     precision: 32
     batch_size: 16
     num_train: 800
-    num_val: 200
+    num_val: 100
+    num_test: 100
     max_epochs: 3
     num_workers: 24
     pin_memory: true
+    log_every_n_steps: 1
     optimizer:
       type: 'AdamW'
       lr: 0.0001 #changed 0.0001 to 0.001
@@ -51,6 +53,11 @@ training:
       factor: 0.8
       patience: 30
       verbose: true
+    early_stopping:      
+      monitor: val_loss
+      patience: 20
+      min_delta: 0.001
+      mode: min
 
 # Logging and checkpoint settings
 logging:
