--- a/config_files/preprocess_config.yaml
+++ b/config_files/preprocess_config.yaml
@@ -1,22 +1,16 @@
-pos_file: "mean_md-pos-1.xyz"
-frc_file: "mean_md-frc-1.xyz"
-scaling_factor: 0.4
-scaling_surf: 0.6
-scaling_core: 0.4
-max_random_displacement: 0.15
-surface_atom_types:
-  - "Cs"
-  - "Br"
-clustering_method: "KMeans"
-num_clusters: 100
-num_samples_pca: 1200
-num_samples_pca_surface: 600
-num_samples_randomization: 200
-SOAP:
-  species: ["Cs", "Pb", "Br"]
-  r_cut: 12.0
-  n_max: 7
-  l_max: 3
-  sigma: 0.1
-  periodic: False
-  sparse: False
+dataset:
+   input_file: "dataset_pos_frc_ev.xyz"
+   output_prefix: "consolidated_dataset" 
+   sizes: [200,500,1000]
+  # Subset counts (number of structures from each method)
+   subset_counts:
+     MD: 4036  # Structures obtained from Molecular Dynamics (MD) simulation 
+   contamination: 0.05 # Fraction of outliers removed by Isolation Forest 
+SOAP: 
+   species: ["In", "P", "Cl"] 
+   r_cut: 12.0 
+   n_max: 7 
+   l_max: 3 
+   sigma: 0.1 
+   periodic: False
+   sparse: False
