Add dscribe dependency to environment YAML

--- a/environment.yaml
+++ b/environment.yaml
@@ -11,5 +11,6 @@ dependencies:
   - wandb
   - pip:
       - schnetpack
+      - dscribe
       - nequip==0.10.0
       - git+https://github.com/mir-group/allegro.git@v0.6.1
