Update templates for multiple GPUs

--- a/src/mlff_qd/templates/mace.yaml
+++ b/src/mlff_qd/templates/mace.yaml
@@ -11,7 +11,7 @@ error_table: PerAtomMAE   # Report validation metrics using MAE
 # ===========================
 device: cuda              # Options: cpu, cuda, mps, xpu
 default_dtype: float32
-
+distributed: false    # True for multiple GPU  keys: true, false
 # ===========================
 # Dataset & Keys
 # ===========================
