Add: auto-DDP handling via apply_autoddp; remove static strategy/num_nodes from templates

--- a/config_files/input.yaml
+++ b/config_files/input.yaml
@@ -39,6 +39,7 @@ common:
     learning_rate: 0.001
     num_workers: 24
     accelerator: cuda
+    devices: 2
     log_every_n_steps: 5
     optimizer: AdamW
     scheduler:
