Add: devices key  in NequIP and Allegro templates

--- a/config_files/nequip.yaml
+++ b/config_files/nequip.yaml
@@ -100,6 +100,7 @@ data:
 trainer:
   _target_: lightning.Trainer
   accelerator: auto
+  devices: 1
   enable_checkpointing: true
   max_epochs: 3
   max_time: 03:00:00:00
