--- a/.github/workflows/notify-push.yaml
+++ b/.github/workflows/notify-push.yaml
@@ -2,6 +2,7 @@ name: Notify on Push to dev_z
 on:
   push:
     branches: [dev_z]  # Later main
+
 jobs:
   notify-push:
     runs-on: ubuntu-latest
@@ -14,18 +15,28 @@ jobs:
 
           short_sha="${GITHUB_SHA::7}"
           commit_message=$(jq -r '.head_commit.message // "No commit message"' "$GITHUB_EVENT_PATH")
-          commit_message=$(printf "%s" "$commit_message" | tr '\n' ' ')
+          commit_message_single_line=$(printf "%s" "$commit_message" | tr '\n' ' ')
+
+          commit_url="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/commit/${GITHUB_SHA}"
+
+          payload=$(jq -n \
+            --arg ref   "$GITHUB_REF_NAME" \
+            --arg actor "$GITHUB_ACTOR" \
+            --arg url   "$commit_url" \
+            --arg sha   "$short_sha" \
+            --arg msg   "$commit_message_single_line" \
+            '{
+              attachments: [{
+                color: "good",
+                mrkdwn_in: ["text"],
+                text:
+                  ("*New Push to Branch*: `"+$ref+"`"
+                   + "\nPushed by: *"+$actor+"*"
+                   + "\nCommit: <"+$url+"|`"+$sha+"`>"
+                   + "\nCommit Message: `"+$msg+"`")
+              }]
+            }')
 
           curl -sS -X POST -H 'Content-type: application/json' \
-            --data "$(cat <<EOF
-          {
-            "attachments": [
-              {
-                "color": "good",
-                "text": "*New Push to Branch*: \`$GITHUB_REF_NAME\`\\nPushed by: *$GITHUB_ACTOR*\\nCommit: <${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/commit/${GITHUB_SHA}|\\\`$short_sha\\\`>\\nCommit Message: \\\`$commit_message\\\`"
-              }
-            ]
-          }
-          EOF
-          )" \
+            --data "$payload" \
             "$SLACK_WEBHOOK_URL"
